; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_emscriptenegl_ctx.c_gfx_ctx_emscripten_get_canvas_size.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_emscriptenegl_ctx.c_gfx_ctx_emscripten_get_canvas_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i64 }

@EMSCRIPTEN_RESULT_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"#canvas\00", align 1
@.str.1 = private unnamed_addr constant [55 x i8] c"[EMSCRIPTEN/EGL]: Could not get screen dimensions: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @gfx_ctx_emscripten_get_canvas_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gfx_ctx_emscripten_get_canvas_size(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %6, align 4
  %8 = call i64 @emscripten_get_fullscreen_status(%struct.TYPE_3__* %5)
  store i64 %8, i64* %7, align 8
  %9 = load i64, i64* %7, align 8
  %10 = load i64, i64* @EMSCRIPTEN_RESULT_SUCCESS, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %2
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %12
  store i32 1, i32* %6, align 4
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32*, i32** %3, align 8
  store i32 %18, i32* %19, align 4
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %4, align 8
  store i32 %21, i32* %22, align 4
  br label %23

23:                                               ; preds = %16, %12
  br label %24

24:                                               ; preds = %23, %2
  %25 = load i32, i32* %6, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %40, label %27

27:                                               ; preds = %24
  %28 = load i32*, i32** %3, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = call i64 @emscripten_get_canvas_element_size(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* %28, i32* %29)
  store i64 %30, i64* %7, align 8
  %31 = load i64, i64* %7, align 8
  %32 = load i64, i64* @EMSCRIPTEN_RESULT_SUCCESS, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %39

34:                                               ; preds = %27
  %35 = load i64, i64* %7, align 8
  %36 = call i32 @RARCH_ERR(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.1, i64 0, i64 0), i64 %35)
  %37 = load i32*, i32** %3, align 8
  store i32 800, i32* %37, align 4
  %38 = load i32*, i32** %4, align 8
  store i32 600, i32* %38, align 4
  br label %39

39:                                               ; preds = %34, %27
  br label %40

40:                                               ; preds = %39, %24
  ret void
}

declare dso_local i64 @emscripten_get_fullscreen_status(%struct.TYPE_3__*) #1

declare dso_local i64 @emscripten_get_canvas_element_size(i8*, i32*, i32*) #1

declare dso_local i32 @RARCH_ERR(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
